@@ -5,8 +5,9 @@ youker-assistant (2.0.2) vivid; urgency=low
   * Add restore button for font.
   * Modify system info display model.
   * Add energy conserving model.
+  * Fixed battery information(LP: #1430128).
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 10 Apr 2015 10:48:22 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 10 Apr 2015 14:59:30 +0800
 
 youker-assistant (2.0.1) vivid; urgency=low
 
